feat: integrate TypeORM with PostgreSQL for data persistence
- Added TypeORM and PostgreSQL dependencies in package.json.
- Configured TypeORM in app.module.ts to connect to PostgreSQL using environment variables.
- Created GroupPostEntity and CommentEntity for database representation of posts and comments.
- Updated GroupPostsResponse DTO to include saved and skipped post counts.
- Implemented PostsRepositoryService for handling database operations related to posts and comments.
- Enhanced FacebookScraperService to save posts incrementally and avoid duplicates in memory and database.
- Added utility methods for counting visible posts and waiting for content to load during scraping.

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,11 @@ PORT=8002
 # Database Configuration (PostgreSQL)
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=scraper_user
+DB_USERNAME=scraper_user
 DB_PASSWORD=scraper_password
 DB_NAME=facebook_scraper
+DB_SYNCHRONIZE=true
+DB_LOGGING=false
 
 # Facebook Credentials
 FACEBOOK_EMAIL=your-email@example.com
